# COMP0035-CK1

./: .flake8  .gitignore  README.md  audit_gross_lt_basic.csv  erd.md  pyproject.toml  requirements.txt  test-output.txt
.github/workflows/: lint.yml
eda_output/: 00_overview.csv  00_overview.md  01_dtypes.csv  01_dtypes.md  02_missing_by_column.csv  02_missing_by_column.md  02b_duplicated_rows.csv  02b_duplicated_rows.md  03_describe_numeric.md  04_describe_all.csv  04_describe_all.md  05_nunique_by_column.csv  05_nunique_by_column.md  07_top10_freq_degree.csv  07_top10_freq_degree.md  07_top10_freq_gross_mthly_25_percentile.csv  07_top10_freq_gross_mthly_25_percentile.md  07_top10_freq_gross_mthly_75_percentile.csv  07_top10_freq_gross_mthly_75_percentile.md  07_top10_freq_school.csv  07_top10_freq_school.md  07_top10_freq_university.csv  07_top10_freq_university.md
prep_output/: 00_clean_preview_head.csv  00_clean_preview_head.md  2.2_anomaly_gross_lt_basic.csv  ges_erd.md  q1_latest_2022_by_university_median.csv  q1_latest_2022_by_university_median.md  q2_trend_table_year_univ_salary_median.csv  q2_trend_table_year_univ_salary_median.md  q3_latest_2022_scatter_numeric_describe.csv  q3_latest_2022_scatter_numeric_describe.md
src/coursework1/: 1.1.py  1.2.py  2.1.py  2.2.py  db.py
src/coursework2/: employment_record.py
tests/: conftest.py  test_employment_record_db.py  test_employment_record_logic.py
