[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0035-cw1"
version = "0.1.2"
description = "COMP0035 Coursework 1 scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2,<3.0",
  "matplotlib>=3.8,<4.0",
  "tabulate>=0.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [".venv", "build", "dist", ".git"]


