[project]
name = "comp0035-coursework"
version = "0.1.2"
description = "COMP0035 Coursework 1 & 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pytest",
  "sqlmodel",
  "pandas>=2.2,<3.0",
  "matplotlib>=3.8,<4.0",
  "tabulate>=0.9"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["coursework1*", "coursework2*"]
exclude = [".venv", "build", "dist", ".git", "tests*"]


